# crypto-news-aggregator

./: README.md  pyproject.toml  run.py  run_bot.py  test_ingestion.py
api/: index.py
app/: config.py  logger.py  pipeline.py  web.py
app/bot/: telegram_bot.py
app/ingestion/: api_fetcher.py  rss_fetcher.py  scraper_fetcher.py
app/processing/: filter.py  summarizer.py
app/storage/: mongodb.py  subscriptions.py
